# pydantic-settings-sources

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml
docs/: TESTING.md
pydantic_settings_sources/: __init__.py  errors.py  sources.py  utils.py
tests/: test_sources.py
tests/data/: config.toml  config.yaml
